--- a/.prettierrc
+++ b/.prettierrc
@@ -1,16 +1,30 @@
 {
-	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
-	"overrides": [
-		{
-			"files": "*.svelte",
-			"options": {
-				"parser": "svelte"
-			}
-		}
-	],
-	"tailwindStylesheet": "src/routes/layout.css"
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "plugins": [
+    "prettier-plugin-svelte",
+    "prettier-plugin-tailwindcss",
+    "@ianvs/prettier-plugin-sort-imports"
+  ],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ],
+  "tailwindStylesheet": "src/routes/layout.css",
+  "importOrder": [
+    "<BUILTIN_MODULES>",
+    "^@sveltejs/(.*)$",
+    "^svelte/(.*)$",
+    "<THIRD_PARTY_MODULES>",
+    "",
+    "^\\$(?!lib/)(.*)$",
+    "^\\$lib/(.*)$",
+    "^(?!.*[.]css$)[./].*$",
+    "",
+    ".css$"
+  ]
 }
