--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
 		"@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+		"@iconify-json/circle-flags": "^1.2.10",
+		"@iconify-json/famicons": "^1.2.2",
+		"@iconify/tailwind4": "^1.1.0",
 		"@inlang/paraglide-js": "^2.4.0",
 		"@sveltejs/adapter-cloudflare": "^7.2.4",
 		"@sveltejs/kit": "^2.47.1",
