--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@ianvs/prettier-plugin-sort-imports": "^4.7.0",
 		"@iconify-json/circle-flags": "^1.2.10",
 		"@iconify-json/famicons": "^1.2.2",
+		"@iconify-json/game-icons": "^1.2.3",
 		"@iconify/tailwind4": "^1.1.0",
 		"@inlang/paraglide-js": "^2.4.0",
 		"@sveltejs/adapter-cloudflare": "^7.2.4",
