--- a/.prettierrc
+++ b/.prettierrc
@@ -12,6 +12,12 @@
       "options": {
         "parser": "svelte"
       }
+    },
+    {
+      "files": "*.jsonc",
+      "options": {
+        "trailingComma": "none"
+      }
     }
   ],
   "tailwindStylesheet": "src/routes/layout.css",
